# crewai-blogpost

./: README.md  pyproject.toml  report.md  server.py  streamlit_app.py
db/: chroma.sqlite3
kaggle-api/: kaggle.py  run.txt
src/blogpost/: crew.py  main.py
src/blogpost/config/: agents.yaml  tasks.yaml
