[project]
name = "blogpost"
version = "0.1.0"
description = "blogpost using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
blogpost = "blogpost.main:run"
run_crew = "blogpost.main:run"
train = "blogpost.main:train"
replay = "blogpost.main:replay"
test = "blogpost.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
